# permutations

./: .gitignore  README.md  iddistexact.py
bin-class-data-gen/: Cargo.toml
bin-class-data-gen/src/: main.rs
binary-classifier/: batchconvert.py  config.py  datagen.slurm  dataloading.py  generation.py  main.py  mechanistic.ipynb  mechanistic.py  mistakes.txt  overlap.py  requirements.txt  testing.py  testing.slurm  transformer-short.slurm  transformer.py  transformer.slurm  utilities.py
binary-classifier/data/: art_test_data.csv  val_data.csv
binary-classifier/data/biggrok/: art_test_data.csv  true_test_data.csv
binary-classifier/data/forcegrok/: art_test_data.csv  train_data1.csv  train_data2.csv  train_data3.csv  train_data4.csv  train_data5.csv  train_data6.csv  (+2 more)
binary-classifier/fast-data-gen/: Cargo.toml  datagen.slurm
fast-data-gen/: Cargo.toml
fast-data-gen/.config/: config
fast-data-gen/src/: main.rs
permutation-generator/: config.py  dataloading.py  main.py  mechanistic.ipynb  testing.py  transformer.py  transformer.slurm  utilities.py
permutation-generator/results/: shorthugegen4.csv  shortlargegen3.csv
scaling-generator/: .Rhistory  config.py  dataloading.py  main.py  mechanistic.ipynb  probe-fos.slurm  probe_main.py  probed_transfomer.py  scaling-generator.code-workspace  testing.py  testing.slurm  training.py  transformer-fos.slurm  transformer-short.slurm  transformer.py  transformer.slurm  utilities.py
scaling-generator/model/: test.pth
scaling-generator/results/: bin-medium-8.0.csv
scaling-generator/wandb/: latest-run
(+118 files in other folders)
