[package]
name = "bin-class-data-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
csv = "1.3.0"
integer-partitions = "0.1.1"
kdam = "0.5.1"
rand = "0.9.0"
rand_distr = "0.5.0"
